--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es2016",
 		"lib": ["es2020"],
-		"module": "commonjs",
+		"module": "CommonJS",
 		"rootDir": "./",
 		"resolveJsonModule": true,
 		"outDir": "./dist",
